--- a/global/youtube.desktop
+++ b/global/youtube.desktop
@@ -1,11 +1,9 @@
 [Desktop Entry]
 Version=1.0
-Name=Firefox
-GenericName=Web Browser
-Comment=Browse the World Wide Web
+Name=youtube afimpel
 Keywords=Internet;WWW;Browser;Web;Explorer
-Exec=firefox %u
-Icon=firefox
+Exec=firefox https://youtube.com/playlist?list=PLO9gTxFm8ywbVwIki0QZzCAzuRcpUUJ2M&si=bFXkE7j-xxPgv-I9
+Icon=youtube
 Terminal=false
 X-MultipleArgs=false
 Type=Application
@@ -15,11 +13,3 @@ StartupWMClass=firefox
 Categories=Network;WebBrowser;
 Actions=new-window;new-private-window;
 X-XFCE-Source=file:///usr/share/applications/firefox.desktop
-
-[Desktop Action new-window]
-Name=New Window
-Exec=firefox --new-window %u
-
-[Desktop Action new-private-window]
-Name=New Private Window
-Exec=firefox --private-window %u
