--- a/global/github.desktop
+++ b/global/github.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=github alpine-linux
 Keywords=Internet;WWW;Browser;Web;Explorer
 Exec=firefox https://github.com/afimpel/alpine-linux
-Icon=git-cola
+Icon=github
 Terminal=false
 X-MultipleArgs=false
 Type=Application
