fix & new feacture

--- a/bspwm/config/lightdm-gtk-greeter.conf
+++ b/bspwm/config/lightdm-gtk-greeter.conf
@@ -51,7 +51,7 @@
 #  transition-duration = overrides default value
 #
 [greeter]
-background=~/.config/bspwm/wallpaper.jpg
+background=/usr/share/backgrounds/wallpaper.jpg
 #user-background=
 #theme-name=
 #icon-theme-name=
@@ -66,3 +66,4 @@ background=~/.config/bspwm/wallpaper.jpg
 #reader=
 #position=
 #screensaver-timeout=
+default-user-image=/usr/share/pixmaps/alpine.png
