icon-theme-name

--- a/global/lightdm-gtk-greeter.conf
+++ b/global/lightdm-gtk-greeter.conf
@@ -52,9 +52,9 @@
 #
 [greeter]
 background=/usr/share/backgrounds/wallpaper.jpg
-#user-background=
-#theme-name=
-#icon-theme-name=
+user-background=/usr/share/backgrounds/wallpaper.jpg
+theme-name=Mint-Y-Dark
+icon-theme-name=Mint-Y
 #font-name=
 #xft-antialias=
 #xft-dpi=
