--- a/global/youtube.desktop
+++ b/global/youtube.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=YouTube: afimpel, el Nerd
+Name=afimpel, el Nerd ( YouTube )
 Keywords=Internet;WWW;Browser;Web;Explorer
 Exec=firefox https://www.youtube.com/@afimpelelnerd
 Icon=afimpelelnerd
