--- a/global/youtube.desktop
+++ b/global/youtube.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=afimpel, el Nerd ( YouTube )
 Keywords=Internet;WWW;Browser;Web;Explorer
 Exec=firefox https://www.youtube.com/@afimpelelnerd
-Icon=afimpelelnerd
+Icon=youtube
 Terminal=false
 X-MultipleArgs=false
 Type=Application
